--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,21 @@
 @charset "utf-8";
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
-/* CSS Document */		
+/* CSS Document */
 body { margin: 0; padding: 0;}
 #info {
         font-family: Sans-Serif;
         position: fixed;
-        top: 18px;
-        left: 80px;
         color: #FFF;
         background: grey;
         padding: 10px 25px 25px;
-        width: 20%;
+        width:100%;
+        height:100px;
+        left:0px;
+        top:0px;
+        position: absolute;
+        padding: 0px;
 }
-#map { position:fixed; top:0; bottom:0; width:100%; }
+#map { position:fixed; top:100px; bottom:0; width:100%; }
 
 
 
@@ -36,22 +39,8 @@ body { margin: 0; padding: 0;}
     }
 
 @media (max-width:800px) {
+h1 { font-size: 1.2em; }
 #map  {
     top:100px;
     }
-    
-#info {
-	/* width:100%; */
-    width:100%;
-	height:100px;
-    text-shadow:none;
-    left:0px;
-    top:0px;  
-	position: absolute;
-    padding: 0px;
-    }
-#infobox{
-    display:none;
-    }    
-    
 }
